<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Famazing</string>

    <!-- Values created -->
    <string name="main_page_title">How is it going today? :)</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="hello_world">Now You at the Main Screen!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="task_nav_label">Tasks</string>
    <string name="alerts_nav_label">Alerts history</string>
    <string name="location_nav_label">Members\' locations</string>

    <array name="features">
        <item name="tasks">Tasks</item>
        <item name="members_locations">Members\' locations</item>
        <item name="alerts_history">Alerts history</item>
        <item name="family">Family</item>
        <item name="logout">LOGOUT</item>
    </array>

    <string name="loading_message">LOADING...</string>
    <string name="missing_connection_message">NO CONNECTION</string>
    <string name="reconnect_button_title">RETRY</string>
    <string name="no_next_task_label">NO TASKS TO COMPLETE</string>
    <string name="no_alert_label">NO ALERT YET (LUCKILY!)</string>
    <string name="empty_tasks_history">NO TASK RELATED TO YOU</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_family">FamilyActivity</string>

    <string name="family_fragment_title">Family recap!</string>
    <string name="members_count">Number of members:</string>

    <string name="alerts_fragment_title">Alerts history</string>
    <string name="title_activity_maps">Map</string>

    <string name="next_task_label">Next task today</string>
    <string name="giver_label">Giver:</string>

    <string name="tasks_fragment_title">Your job!</string>
    <string name="location_fragment_title">Where are the others?</string>
    <string name="title_activity_task_creation">TaskCreationActivity</string>

    <string name="task_name_label">Name:</string>
    <string name="doer_label">Doer:</string>
    <string name="location_label">Location:</string>
    <string name="task_description_label">Description:</string>
    <string name="create_task_button_label">CREATE!</string>

    <string name="task_creation_activity_title">Who has to do what?</string>

    <string name="title_activity_alert_map">AlertMapActivity</string>

    <string name="preferences_group_name">APP SETTINGS</string>
    <string name="emergency_number_key">emergency_number</string>
    <string name="emergency_number_setting_title">SPECIAL ALERT NUMBER</string>
    <string name="default_alert_number">000</string>
    <string name="title_activity_new_place">NewPlaceActivity</string>
    <string name="title_activity_show_alert">Alert location</string>

    <string name="new_place_map_activity_title">Choose the place and give it a name!</string>

</resources>
