<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.HomeActivity"
    android:orientation="vertical"
    android:id="@+id/mainLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Username_field"
        android:id="@+id/name_textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Membership_field"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/membership_textView"
        android:textSize="25dp"
        android:textStyle="italic"
        android:textColor="#000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/loading_message"
        android:id="@+id/tasks_completed_textView"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/loading_message"
        android:id="@+id/tasks_pending_textView"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#000"
        android:textSize="@dimen/abc_text_size_subhead_material" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/next_task_label"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@drawable/complete_border"
            android:padding="10dp"
            android:id="@+id/taskView">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/giver_label"
                    android:id="@+id/textView3"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/loading_message"
                    android:id="@+id/task_giver_textView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#000" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="name"
                android:id="@+id/task_name_textView"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#000"
                android:layout_weight="1" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:touchscreenBlocksFocus="false"
            android:id="@+id/nextTaskOverview"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_message"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:id="@+id/next_task_textView" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
